# cphoto

./: cameraInfo.txt
data/: depth.txt  pointcloud.txt  raw.txt  raw_processed.txt
voxelsdk-examples-0.2.0/DepthCapture/: CMakeLists.txt  DepthCapture.cpp.autosave  DepthReader.cpp
